--- a/public/index.html
+++ b/public/index.html
@@ -19,5 +19,11 @@
     <!-- <script src="https://www.google.com/recaptcha/api.js"></script> -->
 
     <!-- built files will be auto injected -->
+    <!-- <script
+      src="https://www.google.com/recaptcha/api.js?render=explicit"
+      async
+      defer
+    ></script> -->
+    <script src="https://unpkg.com/vue-programmatic-invisible-google-recaptcha@2.1.2/dist/vue-programmatic-invisible-google-recaptcha.min.js"></script>
   </body>
 </html>
